{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 1347,
  "lineage": "149df90c-c4a1-99ca-a047-c0177f4bcfe7",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:356892573173:loadbalancer/app/my-tf-project-alb/ad0ad31bdde47883",
            "arn_suffix": "app/my-tf-project-alb/ad0ad31bdde47883",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-tf-project-alb-284059041.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:356892573173:loadbalancer/app/my-tf-project-alb/ad0ad31bdde47883",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-tf-project-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-2",
            "security_groups": [
              "sg-005cb71caabd514de"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0270a31b949ab68f7"
              },
              {
                "subnet_id": "subnet-03f182e8f27258d78"
              }
            ],
            "subnets": [
              "subnet-0270a31b949ab68f7",
              "subnet-03f182e8f27258d78"
            ],
            "tags": {
              "Name": "my-tf-project-alb"
            },
            "tags_all": {
              "Name": "my-tf-project-alb"
            },
            "vpc_id": "vpc-02e13c61a14f816dd",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.network.aws_security_group.web",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:356892573173:listener/app/my-tf-project-alb/ad0ad31bdde47883/9e5ccf6bf7a7282a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:356892573173:targetgroup/my-tf-project-tg/9bcfe1bacf213885",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:356892573173:listener/app/my-tf-project-alb/ad0ad31bdde47883/9e5ccf6bf7a7282a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:356892573173:loadbalancer/app/my-tf-project-alb/ad0ad31bdde47883",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_lb.web_alb",
            "module.compute.aws_lb_target_group.web_tg",
            "module.network.aws_security_group.web",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:356892573173:targetgroup/my-tf-project-tg/9bcfe1bacf213885",
            "arn_suffix": "targetgroup/my-tf-project-tg/9bcfe1bacf213885",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:356892573173:targetgroup/my-tf-project-tg/9bcfe1bacf213885",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:356892573173:loadbalancer/app/my-tf-project-alb/ad0ad31bdde47883"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-tf-project-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "my-tf-project-tg"
            },
            "tags_all": {
              "Name": "my-tf-project-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02e13c61a14f816dd"
          },
          "dependencies": [
            "module.network.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:356892573173:internet-gateway/igw-0fd915443f89f967e",
            "id": "igw-0fd915443f89f967e",
            "owner_id": "356892573173",
            "region": "ap-northeast-2",
            "tags": {
              "Nmae": "{var.project_name}-igw}"
            },
            "tags_all": {
              "Nmae": "{var.project_name}-igw}"
            },
            "vpc_id": "vpc-02e13c61a14f816dd"
          },
          "dependencies": [
            "module.network.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:356892573173:route-table/rtb-03c78c38c9efbd638",
            "id": "rtb-03c78c38c9efbd638",
            "owner_id": "356892573173",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd915443f89f967e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-tf-project-public-rt"
            },
            "tags_all": {
              "Name": "my-tf-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e13c61a14f816dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.tf-igw",
            "module.network.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000e7a3b0d0a4b9f7",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03c78c38c9efbd638",
            "subnet_id": "subnet-03f182e8f27258d78"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.tf-igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.tf-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa4846505ba1ed41",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03c78c38c9efbd638",
            "subnet_id": "subnet-0270a31b949ab68f7"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.tf-igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:356892573173:security-group/sg-0b7d73ecf276839d3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7d73ecf276839d3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-005cb71caabd514de"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "terraform-20250922015500124400000003",
            "name_prefix": "terraform-",
            "owner_id": "356892573173",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-tf-project-efs-sg"
            },
            "tags_all": {
              "Name": "my-tf-project-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e13c61a14f816dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.web",
            "module.network.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:356892573173:security-group/sg-095cf644a3c9c92ba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095cf644a3c9c92ba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-005cb71caabd514de"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20250922015500124400000004",
            "name_prefix": "terraform-",
            "owner_id": "356892573173",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-tf-project-rds-sg"
            },
            "tags_all": {
              "Name": "my-tf-project-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e13c61a14f816dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.web",
            "module.network.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:356892573173:security-group/sg-005cb71caabd514de",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005cb71caabd514de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "106.246.242.226/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250922015457552700000001",
            "name_prefix": "terraform-",
            "owner_id": "356892573173",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-tf-project-web-sg"
            },
            "tags_all": {
              "Name": "my-tf-project-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e13c61a14f816dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:356892573173:subnet/subnet-0144d053e49e328eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0144d053e49e328eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356892573173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "my-tf-project-private-subnet-1"
            },
            "tags_all": {
              "Name": "my-tf-project-private-subnet-1"
            },
            "vpc_id": "vpc-02e13c61a14f816dd"
          },
          "dependencies": [
            "module.network.aws_vpc.tf-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:356892573173:subnet/subnet-04ca8e10f69271d78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ca8e10f69271d78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356892573173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "my-tf-project-private-subnet-2"
            },
            "tags_all": {
              "Name": "my-tf-project-private-subnet-2"
            },
            "vpc_id": "vpc-02e13c61a14f816dd"
          },
          "dependencies": [
            "module.network.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:356892573173:subnet/subnet-03f182e8f27258d78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f182e8f27258d78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "356892573173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "my-tf-project-public-subnet-1"
            },
            "tags_all": {
              "Name": "my-tf-project-public-subnet-1"
            },
            "vpc_id": "vpc-02e13c61a14f816dd"
          },
          "dependencies": [
            "module.network.aws_vpc.tf-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:356892573173:subnet/subnet-0270a31b949ab68f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0270a31b949ab68f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "356892573173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "my-tf-project-public-subnet-2"
            },
            "tags_all": {
              "Name": "my-tf-project-public-subnet-2"
            },
            "vpc_id": "vpc-02e13c61a14f816dd"
          },
          "dependencies": [
            "module.network.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:356892573173:vpc/vpc-02e13c61a14f816dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0919121f59db1dc06",
            "default_route_table_id": "rtb-0522fd22ef910860e",
            "default_security_group_id": "sg-0615c710b5e9e7a15",
            "dhcp_options_id": "dopt-0c3bbf4cdb679df8e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02e13c61a14f816dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0522fd22ef910860e",
            "owner_id": "356892573173",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "my-tf-project-vpc"
            },
            "tags_all": {
              "Name": "my-tf-project-vpc"
            }
          }
        }
      ]
    }
  ]
}